# generativeai

./: .replit  ingest.py  parse.json  parse.py  pyproject.toml  query.py  requirements.txt  teste.json
scripts/: _utils.sh
