[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.15.0",
    "dotenv>=0.9.9",
    "langchain-text-splitters>=0.3.8",
    "neo4j>=5.28.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "requests>=2.32.3",
]
